--- a/config/popularity_update_config.json
+++ b/config/popularity_update_config.json
@@ -1,30 +1,18 @@
 {
   "crabaccess": {
     "max_back_query": 7,
-    "popdb": {
-      "config": {
-        "url_base": "https://cmsweb.cern.ch/popdb",
-        "auth_handler": "HTTPSCertKeyHandler",
-        "auth_handler_conf": {}
-      }
+    "store": {
+      "db": "dynamo"
     },
-    "store": {},
     "included_sites": ["T0_*", "T1_*", "T2_*"],
     "excluded_sites": ["T1_UK_RAL_ECHO_Disk", "T2_CH_CERNBOX", "T2_MY_UPM_BIRUNI"]
   },
   "globalqueue": {
     "htcondor": {
-      "config": {
-        "collector": "cmsgwms-collector-global.cern.ch:9620",
-        "schedd_constraint": "CMSGWMS_Type =?= \"crabschedd\""
-      }
+      "collector": "cmsgwms-collector-global.cern.ch:9620",
+      "schedd_constraint": "CMSGWMS_Type =?= \"crabschedd\""
     },
-    "store": {}
-  },
-  "mysql": {
-    "db_params": {
-      "config_file": "/etc/my.cnf.d/dynamo.cnf",
-      "config_group": "mysql",
+    "store": {
       "db": "dynamo"
     }
   },
