--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -68,8 +68,8 @@ keyfile=/etc/pki/tls/private/localhost.key
 #  otherwise a single file with all CA certs concatenated)
 capath=/etc/pki/tls/certs/ca-bundle.crt
 
-# Path to the configuration file for common tools (relative to this file)
-tools_conf=tools.json
+# Path to the default configuration file for common tools (relative to this file)
+defaults_conf=defaults.json
 
 [web]
 ## Dynamo web server (backend) configuration
