new variable based on relative age from the latest block replica in partition

--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -69,6 +69,8 @@
         "enforcer": {
           "policy": "$(DYNAMO_BASE)/policies/common/enforcer_rules_physics.json"
         }
+      },
+      "BlockReplicaRelativeAge": {
       }
     }
   },
