lock conversion debugged

--- a/config/convert_dynamo_locks_config.json
+++ b/config/convert_dynamo_locks_config.json
@@ -40,7 +40,10 @@
     }
   },
   "weblock": {
-    "url_base": "https://localhost/registry/detoxlock",
+    "url_base": "https://localhost/registry/detoxlock"
+  },
+  "mysqllock": {
+    "db": "dynamoregister"
   },
   "applock": {
     "user": "dynamo",
