--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -71,6 +71,15 @@
         }
       },
       "BlockReplicaRelativeAge": {
+      },
+      "TapeCopyRequested": {
+        "phedex": {
+          "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
+          "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
+          "auth_handler": "HTTPSCertKeyHandler",
+          "auth_handler_conf": {},
+          "num_attempts": 5
+        }        
       }
     }
   },
@@ -79,7 +88,7 @@
     "service": "dynamo",
     "app": "detox",
     "db_config": {
-      "config_file": "/etc/my.cnf.d/dynamo-read.cnf",
+      "config_file": "/etc/my.cnf.d/dynamo.cnf",
       "config_group": "mysql",
       "db": "dynamoregister"
     }
