--- a/web/lighttpd/fastcgi.conf
+++ b/web/lighttpd/fastcgi.conf
@@ -8,8 +8,12 @@
 server.modules += ( "mod_fastcgi" )
 
 fastcgi.server = ( "/" =>
-	           ((
-		     "socket" => "_socket_"
+                   ((
+                     "socket" => "_socket_"
+                     "check-local" => "disable",
+                     "bin-copy-environment" => (
+                       "PATH", "SHELL", "USER"
+                     )
                    ))
                  )
 
