--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -43,17 +43,8 @@
           "policy": "$(DYNAMO_POLICIES)/common/enforcer_rules_physics.json"
         }
       },
-      "BlockReplicaRelativeAge": {
-      },
-      "TapeCopyRequested": {
-        "phedex": {
-          "url_base": "https://cmsweb.cern.ch/phedex/datasvc/json/prod",
-          "dbs_url": "https://cmsweb.cern.ch/dbs/prod/global/DBSReader",
-          "auth_handler": "HTTPSCertKeyHandler",
-          "auth_handler_conf": {},
-          "num_attempts": 5
-        }        
-      }
+      "BlockReplicaRelativeAge": {},
+      "TapeCopyRequested": {}
     }
   },
   "applock": {
