--- a/web/lighttpd/lighttpd.conf
+++ b/web/lighttpd/lighttpd.conf
@@ -88,7 +88,7 @@ include "modules.conf"
 ##  Basic Configuration
 ## ---------------------
 ##
-server.port = 80
+server.port = 8080
 
 ##
 ## Use IPv6?
@@ -209,7 +209,7 @@ server.network-backend = "sendfile"
 ##
 ## With SELinux enabled, this is denied by default and needs to be allowed
 ## by running the following once : setsebool -P httpd_setrlimit on  
-#server.max-fds = 2048
+server.max-fds = 2048
 
 ##
 ## listen-backlog is the size of the listen() backlog queue requested when
