protect copy-requested datasets

--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -44,7 +44,12 @@
         }
       },
       "BlockReplicaRelativeAge": {},
-      "TapeCopyRequested": {}
+      "TapeCopyRequested": {},
+      "UnhandledCopyExists": {
+        "registry": {
+          "db": "dynamoregister"
+        }
+      }
     }
   },
   "applock": {
