--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -65,7 +65,8 @@ server=SocketAppServer
 #  certfile: Server certificate (can be self-signed)
 #  keyfile: Server private key (can be self-signed)
 #  capath: CA path for client authentication (can be a directory in python 2.7; otherwise a single file with all CA certs concatenated)
-server_conf={"certfile": "/etc/pki/tls/certs/localhost.crt",
+server_conf={"workarea_base": "$(DYNAMO_SPOOL)/work",
+             "certfile": "/etc/pki/tls/certs/localhost.crt",
              "keyfile": "/etc/pki/tls/private/localhost.key",
              "capath": "/etc/pki/tls/certs/ca-bundle.crt"}
 
