need rlfsm from web

--- a/config/web_modules_config.json
+++ b/config/web_modules_config.json
@@ -1,1 +1,12 @@
-{}
+{
+  "rlfsm": {
+    "db": {
+      "db_params": {
+        "db": "dynamo",
+        "user": "dynamofod",
+        "passwd": ""
+      },
+      "history": "dynamohistory"
+    }
+  }
+}
