--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -66,7 +66,7 @@
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_queue"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_queue"],
       ["SELECT, LOCK TABLES", "dynamohistory"],
-      ["INSERT", "dynamohistory", "files"],
+      ["INSERT, UPDATE", "dynamohistory", "files"],
       ["INSERT", "dynamohistory", "file_transfers"],
       ["INSERT", "dynamohistory", "file_deletions"]
     ]
