--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -71,10 +71,11 @@ server=socketappserver:SocketAppServer
 #  certfile: Server certificate (can be self-signed)
 #  keyfile: Server private key (can be self-signed)
 #  capath: CA path for client authentication (can be a directory in python 2.7; otherwise a single file with all CA certs concatenated)
+# Cert and key files here can be generated with /etc/pki/tls/certs/make-dummy-cert if you have openssl installed in Red Hat
 server_conf={"workarea_base": "$(DYNAMO_SPOOL)/work",
              "scheduler_base": "$(DYNAMO_SPOOL)/scheduler",
              "certfile": "/etc/pki/tls/certs/localhost.crt",
-             "keyfile": "/etc/pki/tls/private/localhost.key",
+             "keyfile": "/etc/pki/tls/certs/localhost.crt",
              "capath": "/etc/pki/tls/certs/ca-bundle.crt"}
 
 # Path to the default configuration file for common tools (relative to this file)
