does this work?

--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -95,3 +95,16 @@ contents_path=/usr/local/dynamo/web
 
 # Path to the configuration file for web modules
 modules_config=/etc/dynamo/web_modules_config.json
+
+[file_operations]
+## File operation management
+
+# Whether to transfer and delete files by ourselves
+enabled=true
+
+# File operation methods (standalone: direct gfal-* calls, fts: through FTS)
+backend=standalone
+
+# Configuration JSON for the File Operation Daemon
+fod_conf={"host": "localhost", "user": "dynamofod", "num_parallel_links": 20, "transfer_timeout": 3600}
+#fod_conf={"fts_server": "https://fts3.example.com:8446", "fts_retry": 3, "db_params": {"user": "dynamofod", "db": "dynamo"}}
