--- a/config/updater_standalone_config.json
+++ b/config/updater_standalone_config.json
@@ -3,8 +3,7 @@
     "db": {
       "db_params": {
         "db": "dynamo",
-        "user": "dynamofod",
-        "passwd": ""
+        "user": "dynamofod"
       },
       "history": "dynamohistory"
     },
@@ -13,8 +12,7 @@
       "config": {
         "db_params": {
           "db": "dynamo",
-          "user": "dynamofod",
-          "passwd": ""
+          "user": "dynamofod"
         }
       }
     }
