--- a/defaults.json.template
+++ b/defaults.json.template
@@ -20,17 +20,7 @@
   "operation.copy:CopyInterface": {
     "fullauth": {
       "module": "fodcopy:FODCopyInterface",
-      "config": {
-        "fod": {
-          "db": {
-            "db_params": {
-              "user": "dynamofod",
-              "db": "dynamo"
-            },
-            "history": "dynamohistory"
-          }
-        }
-      }
+      "config": {}
     },
     "readonly": {
       "module": "dummycopy:DummyCopyInterface",
@@ -40,21 +30,20 @@
   "operation.deletion:DeletionInterface": {
     "fullauth": {
       "module": "foddeletion:FODDeletionInterface",
-      "config": {
-        "fod": {
-          "db": {
-            "db_params": {
-              "user": "dynamofod",
-              "db": "dynamo"
-            },
-            "history": "dynamohistory"
-          }
-        }
-      }
+      "config": {}
     },
     "readonly": {
       "module": "dummydeletion:DummyDeletionInterface",
       "config": {}
+    }
+  },
+  "fileop.rlfsm:RLFSM": {
+    "db": {
+      "db_params": {
+        "db": "dynamo",
+        "user": "dynamofod",
+      },
+      "history": "dynamohistory"
     }
   },
   "utils.interface.mysql:MySQL": {
