never mind, calling it stats

--- a/config/web_modules_config.json
+++ b/config/web_modules_config.json
@@ -10,8 +10,8 @@
     }
   },
   "inventory": {
-    "monitor": {
-      "body_html": "inventory/monitor.html",
+    "stats": {
+      "body_html": "inventory/stats.html",
       "default_constraints": {}
     }
   }  
