--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -21,9 +21,11 @@
       ["INSERT, UPDATE, DELETE", "dynamoregister", "activity_lock"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "copy_requests"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "copy_request_items"],
+      ["INSERT, UPDATE, DELETE", "dynamoregister", "copy_request_sites"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "active_copies"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "deletion_requests"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "deletion_request_items"],
+      ["INSERT, UPDATE, DELETE", "dynamoregister", "deletion_request_sites"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "active_deletions"],
       ["INSERT, UPDATE, DELETE", "dynamoregister", "detox_locks"],
       ["SELECT", "dynamoserver", "users"]
