using defaults for web modules too

--- a/defaults.json.template
+++ b/defaults.json.template
@@ -68,6 +68,10 @@
         "dynamofod": {
           "passwd": "",
           "host": "localhost"
+        },
+        "dynamoread": {
+          "passwd": "",
+          "host": "localhost"
         }
       }
     },
