redid temporary tables

--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -50,6 +50,7 @@
     "hosts": ["localhost"],
     "grants": [
       ["SELECT, LOCK TABLES", "dynamo"],
+      ["ALL PRIVILEGES", "dynamo\\_tmp"],
       ["INSERT, UPDATE, DELETE", "dynamo", "transfer_batches"],
       ["INSERT, UPDATE, DELETE", "dynamo", "transfer_queue"],
       ["INSERT, UPDATE, DELETE", "dynamo", "failed_transfers"],
