--- a/defaults.json.template
+++ b/defaults.json.template
@@ -63,15 +63,18 @@
       "params": {
         "dynamo": {
           "passwd": "",
-          "host": "localhost"
+          "host": "localhost",
+          "scratch_db": "dynamo_tmp"
         },
         "dynamofod": {
           "passwd": "",
-          "host": "localhost"
+          "host": "localhost",
+          "scratch_db": "dynamo_tmp"
         },
         "dynamoread": {
           "passwd": "",
-          "host": "localhost"
+          "host": "localhost",
+          "scratch_db": "dynamo_tmp"
         }
       }
     },
@@ -80,7 +83,8 @@
       "params": {
         "dynamoread": {
           "passwd": "",
-          "host": "localhost"
+          "host": "localhost",
+          "scratch_db": "dynamo_tmp"
         }
       }
     }
