--- a/mysql/grants.json.template
+++ b/mysql/grants.json.template
@@ -52,20 +52,20 @@
       ["SELECT, LOCK TABLES", "dynamo"],
       ["ALL PRIVILEGES", "dynamo\\_tmp"],
       ["INSERT, UPDATE, DELETE", "dynamo", "transfer_batches"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "transfer_queue"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "transfer_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "failed_transfers"],
       ["INSERT, UPDATE, DELETE", "dynamo", "deletion_batches"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "deletion_queue"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "deletion_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "file_subscriptions"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "directory_cleaning_queue"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "directory_cleaning_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_servers"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_error_messages"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_transfer_batches"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_transfer_files"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_deletion_batches"],
       ["INSERT, UPDATE, DELETE", "dynamo", "fts_deletion_files"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_queue"],
-      ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_queue"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_tasks"],
+      ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_tasks"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_transfer_batches"],
       ["INSERT, UPDATE, DELETE", "dynamo", "standalone_deletion_batches"],
       ["SELECT, LOCK TABLES", "dynamohistory"],
