--- a/config/detox_config.json
+++ b/config/detox_config.json
@@ -2,6 +2,8 @@
   "detox": {
     "deletion_per_iteration": 0.01,
     "attrs": {
+      "FilePopularity": {
+      }
     }
   },
   "log_level": "info"
