--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -34,19 +34,19 @@ email=
 # Server persistency store technology (leave blank if not running store)
 store=mysql
 
-# Store configuration to be passed to $store/generate_store_conf.py
-store_conf={"server": "dynamosrv", "reader": "dynamoread"}
+# Store configuration to be passed to $store/generate_conf.py
+store_conf={"host": "localhost", "user": "dynamosrv", "readuser": "dynamoread"}
 
 # Master server technology
 master=mysql
 
-# Configuration to be passed to $master/generate_master_conf.py
-master_conf={"host": "localhost", "user": "dynamosrv"}
+# Configuration to be passed to $master/generate_conf.py
+master_conf={"host": "localhost", "user": "dynamosrv", "readuser": "dynamoread"}
 
 # Master server shadow technology
 shadow=mysql
 
-# Configuration to be passed to $shadow/generate_shadow_conf.py
+# Configuration to be passed to $shadow/generate_conf.py
 shadow_conf={"host": "localhost", "user": "dynamosrv"}
 
 # Server update board technology
