--- a/dynamo.cfg.template
+++ b/dynamo.cfg.template
@@ -59,7 +59,7 @@ local_board=mysql
 local_board_conf={"host": "localhost", "user": "dynamosrv"}
 
 # Location of the partition definition
-partition_def=$(DYNAMO_BASE)/etc/default_partitions.txt
+partition_def=/usr/local/dynamo/etc/default_partitions.txt
 
 # Path to the default configuration file for common tools (relative to this file)
 defaults_conf=defaults.json
@@ -78,8 +78,8 @@ server=socketappserver:SocketAppServer
 #  keyfile: Server private key (can be self-signed)
 #  capath: CA path for client authentication (can be a directory in python 2.7; otherwise a single file with all CA certs concatenated)
 # Cert and key files here can be generated with /etc/pki/tls/certs/make-dummy-cert if you have openssl installed in Red Hat
-server_conf={"workarea_base": "$(DYNAMO_SPOOL)/work",
-             "scheduler_base": "$(DYNAMO_SPOOL)/scheduler",
+server_conf={"workarea_base": "/var/spool/dynamo/work",
+             "scheduler_base": "/var/spool/dynamo/scheduler",
              "certfile": "/etc/pki/tls/certs/localhost.crt",
              "keyfile": "/etc/pki/tls/certs/localhost.crt",
              "capath": "/etc/pki/tls/certs/ca-bundle.crt"}
